--- a/public/index.html
+++ b/public/index.html
@@ -453,6 +453,10 @@
       position: static;
       width: auto
     }
+
+    .header {
+      box-shadow: 0 .3125rem .875rem 0 rgba(129,129,129,.2) !important;
+    }
   </style>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/froala/design-blocks@master/dist/css/froala_blocks.min.css">
@@ -467,7 +471,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/">
-          <img src="/img/logo.png" alt="image" height="80" style="margin-bottom: -28px;">
+          <img src="/img/logo.png" alt="image" height="42">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav5"
@@ -496,7 +500,7 @@
       </nav>
     </div>
   </header>
-  <section class="fdb-block" data-block-type="contents" data-id="4" draggable="true">
+  <section class="fdb-block" data-block-type="contents" data-id="4" draggable="true" style="background-color: rgba(0,0,0,0)">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-12 col-md-6 mb-4 mb-md-0">
