--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Don't Phona Corona</title>
-  <link rel="icon" href="https://openmoji.org/data/color/svg/1F637.svg"
+  <link rel="icon" href="https://openmoji.org/data/color/svg/1F637.svg">
   <style type="text/css">
     svg:not(:root).svg-inline--fa {
       overflow: visible
